--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "html": "^1.0.0",
     "http": "0.0.1-security",
+    "https": "^1.0.0",
     "linebot": "^1.6.1"
   },
   "devDependencies": {},
